ALL OPTIMAL PATHS

--- a/ALLINONE.ipynb
+++ b/ALLINONE.ipynb
@@ -10,9 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Flight No.     Timestamp  Altitude   Latitude  Longitude\n",
+      "0      AA101  1.530270e+09   38975.0  53.936440 -14.502541\n",
+      "1      AA151  1.530270e+09   35975.0  49.129004  -4.044335\n",
+      "2      AA198  1.530270e+09       0.0  39.792819 -72.778591\n",
+      "3      AA204  1.530270e+09       0.0  40.222121 -73.325611\n",
+      "4      AA209  1.530270e+09   37975.0  60.809745 -29.756008\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -38,9 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Mode k Mode Color  Switching Threshold(km)  transmission Rate\n",
+      "0       1        Red                   500.00             31.895\n",
+      "1       2     Orange                   400.00             43.505\n",
+      "2       3     Yellow                   300.00             52.857\n",
+      "3       4      Green                   190.00             63.970\n",
+      "4       5       Blue                    90.00             77.071\n",
+      "5       6       Pink                    35.00             93.854\n",
+      "6       7     Purple                     5.56            119.130\n"
+     ]
+    }
+   ],
    "source": [
     "data_trans = {\"Mode k\":[1, 2, 3, 4, 5, 6, 7], \n",
     "        \"Mode Color\":[\"Red\", \"Orange\", \"Yellow\", \"Green\", \"Blue\", \"Pink\", \"Purple\"], \n",
@@ -61,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +208,7 @@
     "airplanes = []\n",
     "ground_stations = []\n",
     "\n",
-    "flight_name=input(\"Enter starting string code of flight: \")\n",
+    "#flight_name=input(\"Enter starting string code of flight: \")\n",
     "with open('NA_11_Jun_29_2018_UTC11_Output.csv', 'r') as file:\n",
     "    reader = csv.reader(file)\n",
     "    next(reader)  # Skip the header row\n",
@@ -196,7 +224,27 @@
     "        y = coordinates[1]\n",
     "        z = coordinates[2]\n",
     "\n",
-    "        if flight_no.startswith(flight_name):\n",
+    "        if flight_no.startswith('AA'):\n",
+    "            airplanes.append((flight_no, x, y, z))\n",
+    "        else:\n",
+    "            ground_stations.append((flight_no, x, y, z))\n",
+    "        \n",
+    "        if flight_no.startswith('BA'):\n",
+    "            airplanes.append((flight_no, x, y, z))\n",
+    "        else:\n",
+    "            ground_stations.append((flight_no, x, y, z))\n",
+    "        \n",
+    "        if flight_no.startswith('DA'):\n",
+    "            airplanes.append((flight_no, x, y, z))\n",
+    "        else:\n",
+    "            ground_stations.append((flight_no, x, y, z))\n",
+    "\n",
+    "        if flight_no.startswith('LH'):\n",
+    "            airplanes.append((flight_no, x, y, z))\n",
+    "        else:\n",
+    "            ground_stations.append((flight_no, x, y, z))\n",
+    "\n",
+    "        if flight_no.startswith('UA'):\n",
     "            airplanes.append((flight_no, x, y, z))\n",
     "        else:\n",
     "            ground_stations.append((flight_no, x, y, z))"
@@ -204,9 +252,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Airplane': 'AA101', 'Routing Path': [('AA151', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA151', 'Routing Path': [('AA71', 43.505)], 'End-to-End Data Rate': 43.505}\n",
+      "{'Airplane': 'AA198', 'Routing Path': [('LH421', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'AA204', 'Routing Path': [('BA174', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'AA209', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA221', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA25', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA258', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA291', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA37', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA45', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA47', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA51', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA57', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA67', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA705', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA71', 'Routing Path': [('AA151', 43.505)], 'End-to-End Data Rate': 43.505}\n",
+      "{'Airplane': 'AA717', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA723', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA725', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA731', 'Routing Path': [('BA177', 119.13)], 'End-to-End Data Rate': 119.13}\n",
+      "{'Airplane': 'AA749', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA751', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA755', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA786', 'Routing Path': [('DL118', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'AA787', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA96', 'Routing Path': [('DL4', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'AA99', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA117', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA173', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA174', 'Routing Path': [('AA204', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'BA175', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA177', 'Routing Path': [('AA731', 119.13)], 'End-to-End Data Rate': 119.13}\n",
+      "{'Airplane': 'BA179', 'Routing Path': [('AA731', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'BA185', 'Routing Path': [('BA207', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'BA191', 'Routing Path': [('BA49', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'BA2037', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA207', 'Routing Path': [('BA185', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'BA212', 'Routing Path': [('AA786', 63.97)], 'End-to-End Data Rate': 63.97}\n",
+      "{'Airplane': 'BA2167', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA217', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA239', 'Routing Path': [('BA179', 63.97)], 'End-to-End Data Rate': 63.97}\n",
+      "{'Airplane': 'BA244', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA249', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA250', 'Routing Path': [('AA96', 63.97)], 'End-to-End Data Rate': 63.97}\n",
+      "{'Airplane': 'BA251', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA283', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA285', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'BA287', 'Routing Path': [('BA239', 43.505)], 'End-to-End Data Rate': 43.505}\n",
+      "{'Airplane': 'BA295', 'Routing Path': [('DL259', 43.505)], 'End-to-End Data Rate': 43.505}\n",
+      "{'Airplane': 'BA49', 'Routing Path': [('BA191', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'BA53', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH400', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH416', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH421', 'Routing Path': [('AA198', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'LH423', 'Routing Path': [('DL154', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'LH438', 'Routing Path': [('BA207', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'LH440', 'Routing Path': [('LH421', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'LH442', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH444', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH454', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH456', 'Routing Path': [('DL17', 43.505)], 'End-to-End Data Rate': 43.505}\n",
+      "{'Airplane': 'LH462', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH475', 'Routing Path': [('UA900', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'LH490', 'Routing Path': [('UA141', 63.97)], 'End-to-End Data Rate': 63.97}\n",
+      "{'Airplane': 'LH501', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH519', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH8164', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH8175', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH8189', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'LH8250', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA119', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA121', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA123', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA135', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA141', 'Routing Path': [('DL118', 63.97)], 'End-to-End Data Rate': 63.97}\n",
+      "{'Airplane': 'UA15', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA160', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA162', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA18', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA21', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA22', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA24', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA26', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA41', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA43', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA45', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA56', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA65', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA71', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA865', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA900', 'Routing Path': [('AA96', 77.071)], 'End-to-End Data Rate': 77.071}\n",
+      "{'Airplane': 'UA945', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA951', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA957', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA961', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA963', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA971', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA973', 'Routing Path': [('AA204', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'UA975', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'UA986', 'Routing Path': [('AA101', 31.895)], 'End-to-End Data Rate': 31.895}\n"
+     ]
+    }
+   ],
    "source": [
     "def find_max_data_rate_routing_paths(airplanes, ground_stations):\n",
     "    routing_paths = []\n",
