--- a/ALLINONE.ipynb
+++ b/ALLINONE.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +223,12 @@
     "        x = coordinates[0]\n",
     "        y = coordinates[1]\n",
     "        z = coordinates[2]\n",
+    "\n",
+    "\n",
+    "        # if flight_no.startswith(flight_name):\n",
+    "        #     airplanes.append((flight_no, x, y, z))\n",
+    "        # else:\n",
+    "        #     ground_stations.append((flight_no, x, y, z))\n",
     "\n",
     "        if flight_no.startswith('AA'):\n",
     "            airplanes.append((flight_no, x, y, z))\n",
@@ -252,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
