--- a/ALLINONE.ipynb
+++ b/ALLINONE.ipynb
@@ -224,6 +224,11 @@
     "        y = coordinates[1]\n",
     "        z = coordinates[2]\n",
     "\n",
+    "        # if flight_no.startswith(flight_name):\n",
+    "        #     airplanes.append((flight_no, x, y, z))\n",
+    "        # else:\n",
+    "        #     ground_stations.append((flight_no, x, y, z))\n",
+    "\n",
     "        if flight_no.startswith('AA'):\n",
     "            airplanes.append((flight_no, x, y, z))\n",
     "        else:\n",
