--- a/ALLINONE.ipynb
+++ b/ALLINONE.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_transmission_rate(distance):\n",
-    "    if 300 <= distance < 400:\n",
-    "        return 52.857\n",
+    "    if 500 <= distance:\n",
+    "        return 31.895\n",
     "    elif 400 <= distance < 500:\n",
     "        return 43.505\n",
-    "    elif 500 <= distance:\n",
-    "        return 31.895\n",
+    "    elif 300 <= distance < 400:\n",
+    "        return 52.857\n",
     "    elif 190 <= distance < 300:\n",
     "        return 63.970\n",
     "    elif 90 <= distance < 190:\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
     "airplanes = []\n",
     "ground_stations = []\n",
     "\n",
-    "# flight_name=input(\"Enter starting string code of flight: \")\n",
+    "flight_name=input(\"Enter starting string code of flight: \")\n",
     "with open('NA_11_Jun_29_2018_UTC11_Output.csv', 'r') as file:\n",
     "    reader = csv.reader(file)\n",
     "    next(reader)  # Skip the header row\n",
@@ -224,15 +224,15 @@
     "        y = coordinates[1]\n",
     "        z = coordinates[2]\n",
     "\n",
-    "        # if flight_no.startswith(flight_name):\n",
-    "        #     airplanes.append((flight_no, x, y, z))\n",
-    "        # else:\n",
-    "        #     ground_stations.append((flight_no, x, y, z))\n",
-    "\n",
-    "        if flight_no.startswith('AA'):\n",
+    "        if flight_no.startswith(flight_name):\n",
     "            airplanes.append((flight_no, x, y, z))\n",
     "        else:\n",
     "            ground_stations.append((flight_no, x, y, z))\n",
+    "\n",
+    "        # if flight_no.startswith('AA'):\n",
+    "        #    airplanes.append((flight_no, x, y, z))\n",
+    "        # else:\n",
+    "        #    ground_stations.append((flight_no, x, y, z))\n",
     "        \n",
     "        # if flight_no.startswith('BA'):\n",
     "        #     airplanes.append((flight_no, x, y, z))\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
