--- a/Miscellaneous/Extra.ipynb
+++ b/Miscellaneous/Extra.ipynb
@@ -11,6 +11,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_distance(lat1, lon1, alt1, lat2, lon2, alt2):\n",
+    "    earth_radius = 6371  # Radius of the Earth in kilometers\n",
+    "\n",
+    "    # Convert latitude and longitude to radians\n",
+    "    lat1_rad = math.radians(lat1)\n",
+    "    lon1_rad = math.radians(lon1)\n",
+    "    lat2_rad = math.radians(lat2)\n",
+    "    lon2_rad = math.radians(lon2)\n",
+    "\n",
+    "    # Convert altitude from feet to kilometers\n",
+    "    alt1_km = alt1 * 0.3048\n",
+    "    alt2_km = alt2 * 0.3048\n",
+    "\n",
+    "    # Calculate the distance between two points using the haversine formula\n",
+    "    dlat = lat2_rad - lat1_rad\n",
+    "    dlon = lon2_rad - lon1_rad\n",
+    "    a = math.sin(dlat / 2) ** 2 + math.cos(lat1_rad) * math.cos(lat2_rad) * math.sin(dlon / 2) ** 2\n",
+    "    c = 2 * math.atan2(math.sqrt(a), math.sqrt(1 - a))\n",
+    "    horizontal_distance = earth_radius * c\n",
+    "\n",
+    "    # Calculate the vertical distance\n",
+    "    vertical_distance = abs(alt2_km - alt1_km)\n",
+    "\n",
+    "    # Calculate the total distance\n",
+    "    distance = math.sqrt(horizontal_distance ** 2 + vertical_distance ** 2)\n",
+    "\n",
+    "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
